--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <script src="app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css"></link>
-    <title>Basic Tetris</title>
+    <title>CG Project</title>
   </head>
   <body>
 
-    <h3>Score:<span id="score">0</span></h3>
-    <button id="start-button">Start/Pause</button>
+    <h3>Total Score:<span id="score">0</span></h3>
+    <button id="start-button">Start/Pause Game</button>
 
     <div class="container">
       <div class="grid">
